# Curiosity-rover-replica-ros2

./: README.md
rover_ws/src/openiotrover_ros2_control/: CMakeLists.txt  package.xml
rover_ws/src/openiotrover_ros2_control/config/: rover_controller_velocity.yaml
rover_ws/src/openiotrover_ros2_control/launch/: rover.launch.py
rover_ws/src/openiotrover_ros2_control/meshes/: Rplidar_base_1.stl  base_link.stl  base_rplidar.stl  h_fl_1.stl  h_fr_1.stl  h_rl_1.stl  h_rr_1.stl  la_l_1.stl  la_r_1.stl  rplidar_1.stl  ua_l_1.stl  ua_r_1.stl  wh_rl_1.stl  wl_fl_1.stl  wl_fr_1.stl  wl_ml_1.stl  wl_mr_1.stl  wl_rr_1.stl
rover_ws/src/openiotrover_ros2_control/meshes/visual/: wheel.stl
rover_ws/src/openiotrover_ros2_control/scripts/: data_rec.py  data_show.py  joint_velocity_publisher_node.py  keyboard_ctrl.py  scan_ctrl.py  state_pub.py  test_camera.py  test_depth.py  test_scan_show.py  test_scan_vel.py
rover_ws/src/openiotrover_ros2_control/urdf/: materials.xacro  rover.xacro.urdf
rover_ws/src/openiotrover_ros2_control/worlds/: rover_empty.world
